--- a/package.json
+++ b/package.json
@@ -1,45 +1,43 @@
 {
-  "name": "immatrikulation",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve --port 3000",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "bcrypt": "^4.0.1",
-    "body-parser": "^1.19.0",
-    "chart.js": "^2.9.3",
-    "core-js": "^3.6.4",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.2",
-    "mysql": "^2.18.1",
-    "swagger-jsdoc": "^3.4.0",
-    "swagger-ui-express": "^4.1.4",
-    "vue": "^2.6.11",
-    "vue-chartkick": "^0.6.0",
-    "vue-google-oauth2": "^1.5.7",
-    "vue-router": "^3.1.5",
-    "vuetify": "^2.4.5",
-    "vuex": "^3.1.2"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.2.0",
-    "@vue/cli-plugin-eslint": "~4.2.0",
-    "@vue/cli-plugin-router": "~4.2.0",
-    "@vue/cli-plugin-vuex": "~4.2.0",
-    "@vue/cli-service": "~4.2.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "^2.0.5",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
-  }
+   "name": "typeorm",
+   "version": "0.0.1",
+   "description": "Awesome project developed with TypeORM.",
+   "devDependencies": {
+      "@types/swagger-ui-express": "^4.1.2",
+      "@types/yamljs": "^0.2.31",
+      "nodemon": "^2.0.7",
+      "ts-node": "^3.3.0",
+      "typescript": "3.3.3333"
+   },
+   "dependencies": {
+      "@types/bcrypt": "^3.0.0",
+      "@types/body-parser": "^1.19.0",
+      "@types/cors": "^2.8.10",
+      "@types/dotenv": "^8.2.0",
+      "@types/express": "^4.17.9",
+      "@types/jsonwebtoken": "^8.5.0",
+      "@types/multer": "^1.4.5",
+      "@types/mysql": "^2.15.18",
+      "@types/node": "^8.0.29",
+      "@types/node-fetch": "^2.5.8",
+      "bcrypt": "^5.0.0",
+      "body-parser": "^1.18.1",
+      "class-validator": "^0.12.2",
+      "cors": "^2.8.5",
+      "dotenv": "^8.2.0",
+      "express": "^4.15.4",
+      "googleapis": "^67.0.0",
+      "jsonwebtoken": "^8.5.1",
+      "multer": "^1.4.2",
+      "mysql": "^2.18.1",
+      "reflect-metadata": "^0.1.10",
+      "swagger-ui-express": "^4.1.6",
+      "typeorm": "^0.2.29",
+      "yamljs": "^0.3.0"
+   },
+   "scripts": {
+      "start": "ts-node src/index.ts",
+      "compile": "tsc && node ./build/index.js",
+      "dev": "nodemon -e ts --exec \"npm run compile\""
+   }
 }
