--- a/.github/workflows/azure-pvb-backend(production).yml
+++ b/.github/workflows/azure-pvb-backend(production).yml
@@ -26,8 +26,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
-        npm run build --if-present
-        npm run test --if-present
+        npm tsc
 
     - name: Run Azure webapp deploy action using publish profile credentials
       uses: azure/webapps-deploy@v2
@@ -36,4 +35,3 @@ jobs:
         slot-name: Production
         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_43A66FD70B39418A8D54298B300879EF }}
         package: .
-
