--- a/.github/workflows/azure-pvb-backend(production).yml
+++ b/.github/workflows/azure-pvb-backend(production).yml
@@ -26,6 +26,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
+        npm run-script compile
 
     - name: Run Azure webapp deploy action using publish profile credentials
       uses: azure/webapps-deploy@v2
