--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
       "jsonwebtoken": "^8.5.1",
       "multer": "^1.4.2",
       "mysql": "^2.18.1",
+      "path": "^0.12.7",
       "reflect-metadata": "^0.1.10",
       "swagger-ui-express": "^4.1.6",
       "typeorm": "^0.2.29",
